编写/authwx路由，验证消息是否来自微信服务器

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-  <h1>{title}</h1>
+  <h1>title</h1>
   <p>Welcome to Express</p>
+
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.20.0/axios.min.js"></script>
+  <script src="./javascripts/index.js"></script>
 </body>
 
 </html>
