--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,15 @@
 </head>
 
 <body>
-  <h1>title</h1>
-  <p>Welcome to Express</p>
+  <div id="app">
+    <h1>title</h1>
+    <p>Welcome to Express</p>
+    <button @click="wxScanQRCode">点击扫描二维码</button></button>
+  </div>
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.20.0/axios.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
   <script src="./javascripts/index.js"></script>
 </body>
 
