--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 
 <head>
   <title>Express</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
