--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/index.css">
 </head>
 
 <body>
@@ -18,6 +18,7 @@
   <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
+  <script src="./javascripts/vconsole.min.js"></script>
   <script src="./javascripts/index.js"></script>
 </body>
 
