重命名index.html为entry.html

--- a/public/entry.html
+++ b/public/entry.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
-  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link rel="stylesheet" href="/stylesheets/entry.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
   <script src="./javascripts/vconsole.min.js"></script>
-  <script src="./javascripts/index.js"></script>
+  <script src="./javascripts/entry.js"></script>
 </body>
 
 </html>
