实现微信网页授权

--- a/public/entry.html
+++ b/public/entry.html
@@ -13,6 +13,7 @@
     <h1>title</h1>
     <p>Welcome to Express</p>
     <button @click="wxScanQRCode">点击扫描二维码</button></button>
+    <a href="javascript:void(0)" @click="getAuth" ref="authLink">请求微信授权</a>
   </div>
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
